config/samples/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: endpoint-test.acm-manager.kubestack.io
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  number: 80
